# web-scraper-ML

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
scraper/: base_spider.py  main.py
scraper/spiders/: olx_spider.py  yahoo_finance_spider.py
